# xswallow

./: .gitignore  Cargo.toml  Makefile  README.md  README.txt  rustfmt.toml  table.c  xswallow.c
src/: context.rs  main.rs  output.rs  swallow.rs
util/: test.sh
