[package]
name = "xswallow"
version = "1.0.0"
edition = "2021"

[dependencies.xcb]
version = "1.4.0"

[dependencies.foldhash]
version = "0.1.3"

[dependencies.ctrlc]
version = "3.4.5"
features = ["termination"]

[dependencies.weak-table]
version = "0.3.2"

# still 20 times larger than the C version but oh well
[profile.release]
strip = true
opt-level = "s"
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
allow_attributes_without_reason = "deny"
